# qtquickcomputeitem

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/basic_storage/: CMakeLists.txt  main.cpp  main.qml
examples/basic_storage/shaders/: computeshader.comp
examples/grayscott_image/: CMakeLists.txt  PresetModel.qml  main.cpp  main.qml
examples/grayscott_image/shaders/: computeshader.comp  postprocessing.frag
examples/grayscott_storage/: CMakeLists.txt  main.qml
examples/grayscott_storage/shaders/: computeshader.comp
src/: CMakeLists.txt  computeitem.cpp  computeitem.h  computeshaderbuffer.cpp  computeshaderbuffer.h  imagebuffer.cpp  imagebuffer.h  imagebufferview.cpp  imagebufferview.h  storagebuffer.cpp  storagebuffer.h  storagebufferview.cpp  storagebufferview.h
src/shaders/: pointcloud.frag  pointcloud.vert
